Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113140

Resizing a QTabBar resets the scroll position

XMLWordPrintable

    • ca15f650a (dev), e851d4c06 (6.5), 2434573f5 (dev), f93c2ef41 (6.5), aef248677 (6.5.1), c113a7a79 (dev), 802eb09da (6.5), 3965d52ad (dev), ec4b9503e (6.6), 73d8115ee (6.5)

      To reproduce:

      • run attached example
      • resize the window in half horizontally
      • scroll to the end
      • select for example tab 7
      • resize the window again

      What happens is that the scroll position jumps to the active tab. Ideally it would only move the scroll position if the tab wouldn't be visible anymore.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            poikelin Joni Poikelin
            Votes:
            7 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: